// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. Renders default layout 1`] = `
<View
  aspectRatio={1.5}
>
  <View
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Image
      onLoad={[Function]}
      source={
        Object {
          "uri": "http://example.com/image.jpg&preview=true",
        }
      }
      style={
        Object {
          "bottom": 0,
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Object {
            "uri": "http://example.com/image.jpg",
          }
        }
        style={
          Object {
            "bottom": 0,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
          }
        }
      />
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <BVLinearGradient
            colors={
              Array [
                "#F9F9F9",
                "#EDEDED",
              ]
            }
            end={
              Object {
                "x": -0.09302964577578221,
                "y": 0.11488204504197774,
              }
            }
            locations={
              Array [
                0,
                1,
              ]
            }
            start={
              Object {
                "x": 1,
                "y": 0,
              }
            }
            style={
              Object {
                "flex": 1,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`2. Renders default layout without uri 1`] = `
<View
  aspectRatio={1.5}
>
  <View
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Image
      onLoad={[Function]}
      source={
        Object {
          "uri": null,
        }
      }
      style={
        Object {
          "bottom": 0,
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        style={
          Object {
            "bottom": 0,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
          }
        }
      />
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <BVLinearGradient
            colors={
              Array [
                "#F9F9F9",
                "#EDEDED",
              ]
            }
            end={
              Object {
                "x": -0.09302964577578221,
                "y": 0.11488204504197774,
              }
            }
            locations={
              Array [
                0,
                1,
              ]
            }
            start={
              Object {
                "x": 1,
                "y": 0,
              }
            }
            style={
              Object {
                "flex": 1,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`3. Renders with a passed style prop 1`] = `
<View
  aspectRatio={1.5}
  style={
    Object {
      "width": 100,
    }
  }
>
  <View
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Image
      onLoad={[Function]}
      source={
        Object {
          "uri": "http://example.com/image.jpg&preview=true",
        }
      }
      style={
        Object {
          "bottom": 0,
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Object {
            "uri": "http://example.com/image.jpg",
          }
        }
        style={
          Object {
            "bottom": 0,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
          }
        }
      />
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <BVLinearGradient
            colors={
              Array [
                "#F9F9F9",
                "#EDEDED",
              ]
            }
            end={
              Object {
                "x": -0.09302964577578221,
                "y": 0.11488204504197774,
              }
            }
            locations={
              Array [
                0,
                1,
              ]
            }
            start={
              Object {
                "x": 1,
                "y": 0,
              }
            }
            style={
              Object {
                "flex": 1,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`4. Renders with prepended https schema 1`] = `
<View
  aspectRatio={1.5}
>
  <View
    style={
      Object {
        "height": "100%",
        "width": "100%",
      }
    }
  >
    <Image
      onLoad={[Function]}
      source={
        Object {
          "uri": "https://example.com/image.jpg&preview=true",
        }
      }
      style={
        Object {
          "bottom": 0,
          "height": "100%",
          "left": 0,
          "position": "absolute",
          "right": 0,
          "top": 0,
          "width": "100%",
        }
      }
    />
    <View
      style={
        Object {
          "height": "100%",
          "width": "100%",
        }
      }
    >
      <Image
        onLoad={[Function]}
        source={
          Object {
            "uri": "https://example.com/image.jpg",
          }
        }
        style={
          Object {
            "bottom": 0,
            "height": "100%",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": 0,
            "width": "100%",
          }
        }
      />
      <View
        onLayout={[Function]}
        style={
          Object {
            "flex": 1,
          }
        }
      >
        <View
          style={
            Object {
              "flex": 1,
            }
          }
        >
          <BVLinearGradient
            colors={
              Array [
                "#F9F9F9",
                "#EDEDED",
              ]
            }
            end={
              Object {
                "x": -0.09302964577578221,
                "y": 0.11488204504197774,
              }
            }
            locations={
              Array [
                0,
                1,
              ]
            }
            start={
              Object {
                "x": 1,
                "y": 0,
              }
            }
            style={
              Object {
                "flex": 1,
              }
            }
          />
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`5. Renders a placeholder 1`] = `
<View
  onLayout={[Function]}
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Gradient
    degrees={264}
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "flex": 1,
          "justifyContent": "center",
        }
      }
    >
      <Svg
        height={82.23350253807106}
        version="1.1"
        width={82.23350253807106}
      >
        <G
          fill="none"
          fillRule="evenodd"
          stroke="none"
          strokeWidth="1"
        >
          <Path
            fill="#FFFFFF"
          />
        </G>
      </Svg>
    </View>
  </Gradient>
</View>
`;
